fixed contact info not showing

--- a/src/components/styles/Footer.scss
+++ b/src/components/styles/Footer.scss
@@ -34,6 +34,7 @@ footer {
       p {
         margin-top: 1rem;
         font-size: 1.1rem;
+        opacity: 1;
         color: rgba(white, 0.75);
         text-align: left;
         font-family: "Poppins", sans-serif;
